RESOLVED FIXED139556
[iOS][WK2] Ignore synthetic click initiated on a previous page
https://bugs.webkit.org/show_bug.cgi?id=139556
Summary [iOS][WK2] Ignore synthetic click initiated on a previous page
Benjamin Poulain
Reported 2014-12-11 12:57:03 PST
[iOS][WK2] Ignore synthetic click initiated on a previous page
Attachments
Patch (12.94 KB, patch)
2014-12-11 14:22 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2014-12-11 14:22:30 PST
Benjamin Poulain
Comment 2 2014-12-12 17:17:32 PST
Alexey Proskuryakov
Comment 3 2014-12-16 20:06:12 PST
Comment on attachment 243146 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243146&action=review > Source/WebKit2/ChangeLog:27 > + First, in the UIProcess, we just cancel the HighlightLongPressGestureRecognizer > + on didCommitLoadForMainFrame. This prevents "fast clicks" from accidentally going through. > + This is not bullet proof because we get didCommitLoadForMainFrame asynchronously but > + killing the timer and gesture seems like a good idea. Also, it's not just the main frame that has this problem, secondary frames too. > Source/WebKit2/ChangeLog:39 > + If the user interaction result in a tap, we send the commit ID along the tap commands. > + In the WebProcess, we know the actual layer tree commit associated with the current page. > + If the tap was generated with a layer ID preceding the current page, we fail the command. I'm somewhat concerned here, because I don't understand how FOUC prevention works. We don't necessarily paint after committing a load, but what happens with events that are delivered when there is some content loaded, but we are blocking painting? Seems like we might still have the same problem.
David Kilzer (:ddkilzer)
Comment 4 2015-01-17 14:43:36 PST
Comment on attachment 243146 [details] Patch Overall this seems fine, but r- to address Alexey's concerns.
David Kilzer (:ddkilzer)
Comment 5 2015-01-22 15:08:41 PST
Comment on attachment 243146 [details] Patch Ben and Alexey talked offline. The plan is for Ben to file a follow-up bug for the non-main frame case, but land this fix to move forward with fixing this issue with the main frame.
David Kilzer (:ddkilzer)
Comment 6 2015-01-22 15:08:56 PST
(In reply to comment #5) > Comment on attachment 243146 [details] > Patch > > Ben and Alexey talked offline. The plan is for Ben to file a follow-up bug > for the non-main frame case, but land this fix to move forward with fixing > this issue with the main frame. r=me
Benjamin Poulain
Comment 7 2015-01-22 20:17:04 PST
Comment on attachment 243146 [details] Patch Clearing flags on attachment: 243146 Committed r178980: <http://trac.webkit.org/changeset/178980>
Benjamin Poulain
Comment 8 2015-01-22 20:17:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.