Source/WebKit2/UIProcess/ios/WKContentView.mm
@@ -461,6 +461,7 @@ private:
 - (void)_didCommitLoadForMainFrame
 {
     [self _stopAssistingNode];
+    [self _cancelLongPressGestureRecognizer];
     [_webView _didCommitLoadForMainFrame];
 }
 
